@@ -8,6 +8,8 @@
 #include <openssl/ssl.h>
 #include <openssl/err.h>
 
+#include <openssl/x509v3.h>
+
 static const char* FILE_NAME = "Net/SSLeay/X509.c";
 
 int32_t SPVM__Net__SSLeay__X509__get_issuer_name(SPVM_ENV* env, SPVM_VALUE* stack) {
@@ -215,6 +217,30 @@ int32_t SPVM__Net__SSLeay__X509__dup(SPVM_ENV* env, SPVM_VALUE* stack) {
   void* obj_x509_dup = stack[0].oval;
   
   stack[0].oval = obj_x509_dup;
+  
+  return 0;
+}
+
+
+int32_t SPVM__Net__SSLeay__X509__check_issued(SPVM_ENV* env, SPVM_VALUE* stack) {
+  
+  int32_t error_id = 0;
+  
+  void* obj_self = stack[0].oval;
+  
+  void* obj_subject = stack[1].oval;
+  
+  X509* x509 = env->get_pointer(env, stack, obj_self);
+  
+  if (!obj_subject) {
+    return env->die(env, stack, "The X509 object $subject must be defined.", __func__, FILE_NAME, __LINE__);
+  }
+  
+  X509* subject = env->get_pointer(env, stack, obj_subject);
+  
+  int32_t status = X509_check_issued(x509, subject);
+  
+  stack[0].ival = status;
   
   return 0;
 }
