@@ -9,6 +9,7 @@
     * Add Net::SSLeay::X509_STORE_CTX#Init method.
     * Add Net::SSLeay::X509#dup method.
     * Add Net::SSLeay::OCSP#cert_to_id method.
+    * Add Net::SSLeay::X509#check_issued method.
 0.013 2024-11-14
   [New Features]
     * Add Net::SSLeay::OCSP#response_status_str method.
